Removed enable preview mode from main pom